NEW 258298
`testRunner.dumpAsText(true)` doesn't dump pixels
https://bugs.webkit.org/show_bug.cgi?id=258298
Summary `testRunner.dumpAsText(true)` doesn't dump pixels
Vitaly Dyackhov
Reported 2023-06-20 06:34:49 PDT
`LayoutTests/animations/animation-offscreen-to-onscreen.html` for example uses this snippet: ``` if (window.testRunner) { window.testRunner.dumpAsText(true); } ``` But `WebKitTestRunner` only dumps text but not pixels: ``` WebKitBuild/Release/bin/WebKitTestRunner LayoutTests/animations/animation-offscreen-to-onscreen.html Gdk-Message: 15:30:20.976: Window 0x5605b1a30790 is a temporary window without parent, application will not be able to position it on screen. Content-Type: text/plain PASS - "webkitTransform" property for "box" element at 0.5s saw something close to: 1,0,0,1,100,0 #EOF #EOF #EOF ```
Attachments
Vitaly Dyackhov
Comment 1 2023-06-20 06:52:25 PDT
Alexey Proskuryakov
Comment 2 2023-06-20 10:55:20 PDT
I could swear we had a bug about this, but I cannot find it.
Radar WebKit Bug Importer
Comment 3 2023-06-27 06:35:16 PDT
Note You need to log in before you can comment on or make changes to this bug.