`testRunner.dumpAsText(true)` doesn't dump pixels https://bugs.webkit.org/show_bug.cgi?id=258298

Reviewed by NOBODY (OOPS!).

In `InjectedBundlePage::dump()` we currently dump pixels only when both
`injectedBundle.shouldDumpPixels()` and
`injectedBundle.testRunner()->shouldDumpPixels()` return `true`.

While `TestRunner`'s flag can be dynamically updated during the test
execution using `testRunner.dumpAsText(true)`,
the corresponding `InjectedBundle`'s flag is only set at the beginning
of every test and never gets updated.

Taking into account that the initial value of `InjectedBundle`'s
`m_dumpPixels` is effectively the same as `TestRunner`'s,
we don't need to check it.

In fact, this variable is totally redundant and can be removed.

* Tools/WebKitTestRunner/InjectedBundle/InjectedBundle.cpp:
(WTR::InjectedBundle::didReceiveMessageToPage):
(WTR::InjectedBundle::beginTesting):
* Tools/WebKitTestRunner/InjectedBundle/InjectedBundle.h:
(WTR::InjectedBundle::shouldDumpPixels const): Deleted.
* Tools/WebKitTestRunner/InjectedBundle/InjectedBundlePage.cpp:
(WTR::InjectedBundlePage::dump):
* Tools/WebKitTestRunner/TestInvocation.cpp:
(WTR::TestInvocation::createTestSettingsDictionary):