Tools/WebKitTestRunner/InjectedBundle/InjectedBundle.h
@@ -79,7 +79,6 @@ public:
     WKBundleFrameRef topLoadingFrame() { return m_topLoadingFrame; }
     void setTopLoadingFrame(WKBundleFrameRef frame) { m_topLoadingFrame = frame; }
 
-    bool shouldDumpPixels() const { return m_dumpPixels; }
     bool dumpJSConsoleLogInStdErr() const { return m_dumpJSConsoleLogInStdErr; };
 
     enum class IsFinalTestOutput : bool { No, Yes };
@@ -206,7 +205,6 @@ private:
     };
     State m_state { Idle };
 
-    bool m_dumpPixels { false };
     bool m_useWorkQueue { false };
     bool m_pixelResultIsPending { false };
     bool m_dumpJSConsoleLogInStdErr { false };
