Tools/WebKitTestRunner/InjectedBundle/InjectedBundlePage.cpp
@@ -800,7 +800,7 @@ void InjectedBundlePage::dump()
     if (injectedBundle.testRunner()->shouldDumpBackForwardListsForAllWindows())
         injectedBundle.dumpBackForwardListsForAllPages(stringBuilder);
 
-    if (injectedBundle.shouldDumpPixels() && injectedBundle.testRunner()->shouldDumpPixels()) {
+    if (injectedBundle.testRunner()->shouldDumpPixels()) {
         bool shouldCreateSnapshot = injectedBundle.testRunner()->isPrinting();
         if (shouldCreateSnapshot) {
             WKSnapshotOptions options = kWKSnapshotOptionsShareable;
